--- a/app/src/main/res/layout-land/activity_movie_details.xml
+++ b/app/src/main/res/layout-land/activity_movie_details.xml
@@ -13,11 +13,19 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/ivDetailsPoster"
+            android:layout_width="350dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:onClick="onClick"
+            tools:srcCompat="@tools:sample/avatars" />
+
         <TextView
             android:id="@+id/tvDetailsTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="41dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
             android:text="Placeholder Text"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
@@ -37,7 +45,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
-            android:maxLines="6"
             android:text="Placeholder text. Lorem ipsum dolor sit amet" />
 
         <TextView
